# trionyx

./: Cargo.toml  README.md
scraping/: Cargo.toml  README.md
scraping/src/: html.rs  main.rs  main.wry.rs  types.rs
src/: main.rs  scrape.rs
src-tauri/: Cargo.toml  tauri.conf.json
