[package]
name = "scraping"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.5", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
reqwest = "0.11"
scraper = "0.18"
tao = { version = "0.24", default-features = false, features = [ "rwh_05" ] }
tokio = { version = "1", features = ["full"] }
wry = "0.35"
